my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EDMETH/T_EDMETH-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EDMETH_STRUCT_H
#define T_EDMETH_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EDMETH(void);


#endif /* not T_EDMETH_STRUCT_H */
